@@ -1,3 +1,7 @@
+2016-12-18 S. Thiell <sthiell@stanford.edu>
+
+	* Clush.py: fix sorting issue with clush -L (ticket #326).
+
 2016-11-06 S. Thiell <sthiell@stanford.edu>
 
 	* cluset: add cluset command with doc to avoid a conflict with xCAT's
